"changes are commited"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         <a href="#contact">Contact</a>
       </nav>
 
-      <div class="fa-regular fa-moon" onclick="darkMode()" id="darkMode" title="Enable darkMode"></div>
+      <div
+        class="fa-regular fa-moon"
+        onclick="darkMode()"
+        id="darkMode"
+        title="Enable darkMode"
+      ></div>
 
       <div class="fa-solid fa-bars" id="menu-icon"></div>
     </header>
@@ -35,7 +40,7 @@
         <h3>Hello, I am</h3>
         <h1>Younis Ali</h1>
         <p>
-          Hi am Younis and am a talented full-stack developer and web designer
+          Hi am Younis and am a talented Frontend web developer and web designer
           who creates visually appealing, responsive websites with clean code,
           modern design, and excellent user experience. .
         </p>
@@ -76,14 +81,14 @@
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Hi Am here to Help Your Next Project!</h3>
         <p>
-          Am a dedicated full-stack developer and innovative web designer with a
-          passion for crafting responsive, user-centric websites. He blends
+          Am a dedicated Frontend Web developer and innovative web designer with
+          a passion for crafting responsive, user-centric websites. He blends
           creativity with technical expertise to deliver seamless digital
           experiences, ensuring functionality and visual appeal across all
-          devices. With strong skills in both front-end and back-end
-          development, Younis creates clean, efficient code and modern designs
-          that engage users, meet business goals, and reflect the latest web
-          technologies and design trends.
+          devices. With strong skills in both front-end development, am creates
+          clean, efficient code and modern designs that engage users, meet
+          business goals, and reflect the latest web technologies and design
+          trends.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
@@ -97,7 +102,7 @@
           <i class="fa-solid fa-code"></i>
           <h3>Web Development</h3>
           <p>
-           Am a skilled web developer who builds responsive, high-performance
+            Am a skilled web developer who builds responsive, high-performance
             websites using modern technologies, clean code, and a strong focus
             on user experience and functionality.
           </p>
@@ -107,7 +112,7 @@
           <i class="fa-solid fa-paintbrush"></i>
           <h3>UI/UX Designing</h3>
           <p>
-           Am a talented UI/UX designer who creates user-friendly, visually
+            Am a talented UI/UX designer who creates user-friendly, visually
             appealing interfaces focused on seamless interaction, modern design
             trends, and exceptional user experience.
           </p>
@@ -131,77 +136,115 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="calc.png" alt="">
+          <img src="calc.png" alt="" />
 
           <div class="portfolio-layer">
             <h4>Web Development</h4>
-            <p>Am develop a fully functional calculator using HTML,css and JavaScript</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>
+              Am develop a fully functional calculator using HTML,css and
+              JavaScript
+            </p>
+            <a href="#"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
           </div>
         </div>
-         <div class="portfolio-box">
-          <img src="Start Project Complete Responsive Portfolio Website/images/portfolio2.jpg" alt="">
+        <div class="portfolio-box">
+          <img
+            src="Start Project Complete Responsive Portfolio Website/images/portfolio2.jpg"
+            alt=""
+          />
 
           <div class="portfolio-layer">
             <h4>Web Development</h4>
-            <p>Am develop a fully strong password generator using HTML,css and JavaScript</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>
+              Am develop a fully strong password generator using HTML,css and
+              JavaScript
+            </p>
+            <a href="#"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
           </div>
         </div>
-         <div class="portfolio-box">
-          <img src="spe.png" alt="">
+        <div class="portfolio-box">
+          <img src="spe.png" alt="" />
 
           <div class="portfolio-layer">
             <h4>Web Development</h4>
-            <p>Am develop a fully functional text to voice convertor using HTML,css and JavaScript</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>
+              Am develop a fully functional text to voice convertor using
+              HTML,css and JavaScript
+            </p>
+            <a href="#"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
           </div>
         </div>
-         <div class="portfolio-box">
-          <img src="st.png" alt="">
+        <div class="portfolio-box">
+          <img src="st.png" alt="" />
 
           <div class="portfolio-layer">
             <h4>Web Development</h4>
-            <p>Am develop a fully functional stopwatch using HTML,css and JavaScript</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>
+              Am develop a fully functional stopwatch using HTML,css and
+              JavaScript
+            </p>
+            <a href="#"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
           </div>
         </div>
-         <div class="portfolio-box">
-          <img src="str.png" alt="">
+        <div class="portfolio-box">
+          <img src="str.png" alt="" />
 
           <div class="portfolio-layer">
             <h4>Web Development</h4>
-            <p>Am develop a fully strong password generator using HTML,css and JavaScript</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>
+              Am develop a fully strong password generator using HTML,css and
+              JavaScript
+            </p>
+            <a href="#"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
           </div>
         </div>
-         <div class="portfolio-box">
-          <img src="todi.png" alt="">
+        <div class="portfolio-box">
+          <img src="todi.png" alt="" />
 
           <div class="portfolio-layer">
             <h4>Web Development</h4>
-            <p>Am develop a fully functional To Do List using HTML,css and JavaScript</p>
-            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <p>
+              Am develop a fully functional To Do List using HTML,css and
+              JavaScript
+            </p>
+            <a href="#"
+              ><i class="fa-solid fa-arrow-up-right-from-square"></i
+            ></a>
           </div>
         </div>
       </div>
     </section>
-
 
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
 
       <form action="#">
         <div class="input-box">
-          <input type="text" placeholder="Full Name">
-          <input type="email" placeholder="Email Address">
+          <input type="text" placeholder="Full Name" />
+          <input type="email" placeholder="Email Address" />
         </div>
-         <div class="input-box">
-          <input type="number" placeholder="Mobile Number">
-          <input type="text" placeholder="Email Subject">
+        <div class="input-box">
+          <input type="number" placeholder="Mobile Number" />
+          <input type="text" placeholder="Email Subject" />
         </div>
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-        <input type="submit" value="Send Message" class="btn">
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <input type="submit" value="Send Message" class="btn" />
       </form>
     </section>
 
